Rendering top-level actions in tables

--- a/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/bootstrap-overrides-all-v2.css
+++ b/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/bootstrap-overrides-all-v2.css
@@ -235,6 +235,12 @@ body {
     width: 3%;
 }
 
+.collectionContentsAsAjaxTablePanel table.contents thead .action-column,
+.collectionContentsAsAjaxTablePanel table.contents tbody .action-column {
+    text-align: center;
+    width: 3%;
+}
+
 .collectionContentsAsAjaxTablePanel table.contents a:hover {
     text-decoration:underline;
 }
